--- a/task/day-010/reactandang/src/components/Hero/Hero.css
+++ b/task/day-010/reactandang/src/components/Hero/Hero.css
@@ -3,7 +3,6 @@
   background-size: cover;
   background-position: center -50px;
   position: relative;
-  margin-top: -70px;
   height: 340px;
   border-bottom-left-radius: 60px !important;
   border-bottom-right-radius: 60px !important;
@@ -38,6 +37,12 @@
   font-size: 1rem;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+@media (min-width: 552px) {
+  .jumbotron {
+    margin-top: -70px;
+  }
 }
 
 @media (min-width: 992px) {
