--- a/task/day-015/reactandang/src/styles/index.css
+++ b/task/day-015/reactandang/src/styles/index.css
@@ -1,20 +1,67 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-a {
-  color: #000000 !important;
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: normal;
+  background: none;
+  border: none;
+  border-radius: none;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.3rem !important;
 }
 
 ul,
 li {
-  list-style: none;
+  list-style-type: none;
+}
+
+.card__container {
+  margin: 10px auto;
+  max-height: 30em;
+  display: flex;
+  overflow-x: auto;
+}
+
+.card__container::-webkit-scrollbar {
+  width: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.job__card {
+  margin-bottom: 20px;
 }
