--- a/task/day-016/dashboard/src/index.css
+++ b/task/day-016/dashboard/src/index.css
@@ -12,6 +12,41 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.app {
+ul,
+li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.App {
+  padding: 10px;
+  margin: 20px auto;
+  width: 90%;
+}
+
+.empty {
+  margin: 20px;
   text-align: center;
+}
+
+form {
+  padding: 20px;
+}
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 6px 0;
+  background: #ddd;
+  border: 0;
+}
+
+input[type="submit"],
+button {
+  margin: 10px auto;
+  background: #ddd;
+  border: 0;
+  padding: 6px 20px;
+  display: block;
 }
